# cross-compile-cpp-windows-on-linux

./: CMakeLists.txt  README.md  bld.sh  hello.cpp  hello_win.cpp  routine32.asm  routine64.asm  x86_32-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
